--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             console.info('yeh');
             document.getElementsByClassName("input__label-content")[0].innerHTML = "Ссылка скопирована";
             document.getElementsByClassName("input__label-content")[0].style.color = "#4BB543";
-            setTimeout(function(){document.getElementsByClassName("input__label-content")[0].innerHTML = "Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span>";}, 1500);
+            setTimeout(function(){document.getElementsByClassName("input__label-content")[0].innerHTML = "Укажите ссылку <span class='notValid_not'>t.me/</span> или <span class='notValid_not'>@username</span>";}, 1500);
             setTimeout(function(){document.getElementsByClassName("input__label-content")[0].style.color = "#6a7989";}, 1500);
         });
     }
