--- a/index.html
+++ b/index.html
@@ -474,6 +474,8 @@
           transform: scaleY(0);
           transform-origin: top;
           margin-top: 15px;
+          background-color: #fff;
+          color: #535d92;
         }
         
         .btn_getLinkShow {
