--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             z-index: 10000;
         }
 
-        .input__field--kyo:focus + .input__label--kyo {
+        .input__field--kyo:focus + .input__label--kyo + .btn_getLink {
             color: #fff;
         }
 
