--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         }
 
         .input__field--kyo:focus,
-        .input__field--kyo:focus +  .input__label--kyo .input__label-content--kyo {
+        .input__field--kyo:focus +  .input__label--kyo .input__label-content--kyo + .btn_getLink {
             z-index: 10000;
         }
 
@@ -448,7 +448,7 @@
             color: #fff;
         }
 
-        .input__field--kyo:focus + .input__label--kyo::after {
+        .input__field--kyo:focus + .input__label--kyo::after + .btn_getLink {
             opacity: 1;
         }
         
