--- a/index.html
+++ b/index.html
@@ -438,13 +438,14 @@
         .input__label-content--kyo {
             padding: 0.5em 0;
         }
-
+        
+        .btn_getLink,
         .input__field--kyo:focus,
-        .input__field--kyo:focus +  .input__label--kyo .input__label-content--kyo + .btn_getLink {
+        .input__field--kyo:focus +  .input__label--kyo .input__label-content--kyo {
             z-index: 10000;
         }
-
-        .input__field--kyo:focus + .input__label--kyo + .btn_getLink {
+    
+        .input__field--kyo:focus + .input__label--kyo {
             color: #fff;
         }
 
