--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             color: #fff;
         }
 
-        .input__field--kyo:focus + .input__label--kyo::after + .btn_getLink {
+        .input__field--kyo:focus + .input__label--kyo::after {
             opacity: 1;
         }
         
