--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1e96c8">
     <meta name="apple-mobile-web-app-title" content="tgo.to">
     <meta name="author" content="NikitaShal">
     <meta name="keywords" content="Telegram, Freedom, tgo.to">
     <meta name="description" content="Рабочая телеграм ссылка">
     <meta name="yandex-verification" content="9514ed2cd535e5da" />
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#1e96c8">
+    <meta name="theme-color" content="#1e96c8">
     <title>Telegram GoTo⚡️</title>
     
     <script>  
