--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1e96c8">
     <meta name="apple-mobile-web-app-title" content="tgo.to">
     <meta name="telegram goto" content="tgo.to">
     <meta name="yandex-verification" content="9514ed2cd535e5da" />
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#1e96c8">
+    <meta name="theme-color" content="#1e96c8">
     <title>Telegram GoTo About⚡️</title>
     
     <script>
