--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <title>Telegram GoTo⚡️</title>
     
     <script>  
+    if ('serviceWorker' in navigator) {
+        console.log("Will the service worker register?");
+        navigator.serviceWorker.register('service-worker.js')
+          .then(function(reg){
+            console.log("Yes, it did.");
+         }).catch(function(err) {
+            console.log("No it didn't. This happened:", err)
+        });
+     }     
     window.addEventListener( "pageshow", function ( event ) {
       var historyTraversal = event.persisted || 
                              ( typeof window.performance != "undefined" && 
