--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1e96c8">
     <meta name="apple-mobile-web-app-title" content="tgo.to">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="author" content="NikitaShal">
     <meta name="keywords" content="Telegram, Freedom, tgo.to">
     <meta name="description" content="Рабочая телеграм ссылка">
