--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
     <title>Telegram GoTo⚡️</title>
     
     <script>  
+    let deferredPrompt;
+
+    window.addEventListener('beforeinstallprompt', (e) => {
+      // Prevent Chrome 67 and earlier from automatically showing the prompt
+      e.preventDefault();
+      // Stash the event so it can be triggered later.
+      deferredPrompt = e;
+      
+        deferredPrompt.prompt();
+      // Wait for the user to respond to the prompt
+      deferredPrompt.userChoice
+        .then((choiceResult) => {
+          if (choiceResult.outcome === 'accepted') {
+            console.log('User accepted the A2HS prompt');
+          } else {
+            console.log('User dismissed the A2HS prompt');
+          }
+          deferredPrompt = null;
+        });
+    });
     if ('serviceWorker' in navigator) {
         console.log("Will the service worker register?");
         navigator.serviceWorker.register('service-worker.js')
