--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
         if(document.getElementsByClassName("getinput")[0].value.length >= 3) {
             document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkShow");
         }
+        var clipboard = new ClipboardJS('.btn_getLink', {
+            target: function() {
+                return document.getElementsByClassName("getinput")[0];
+            }
+        });
     });
     
     document.addEventListener('gesturestart', function (e) {
