--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     }
         
     function goTestLink() {
-        window.location.assign(document.getElementsByClassName("getinput")[0].value);
+        window.location.assign(document.getElementsByClassName("getinput")[0].value.slice(7));
     }
     
 (function(l, projectPages) {
