--- a/index.html
+++ b/index.html
@@ -562,6 +562,9 @@
             .sayHello {
                 display: none;
             }
+            .btn_goTestLink {
+                padding: 10px;
+            }
         }
     </style>
 </body>
