--- a/about.html
+++ b/about.html
@@ -26,13 +26,13 @@
   <body>
     <div class="container">
       <div>
-        <h2 class="Logo">Telegram GoTo</h2>
+        <h2 class="Logo">Telegram GoTo⚡️</h2>
             <div class="about">
                 <p>
-                Сервис создания ссылок работающих на территории стран где заблокирован мессенджер Telegram.
+                Когда не работает t.me/
                 </p>
                 <p>
-                  <i>Зачем?</i> - Я за удобный интернет и свободу слова.
+                  <i>Зачем?</i> - Это удобнее чем вбивать логин в телеграм вручную.
                 </p>
                 <p>
                   <i>Есть аналоги. Чем <a href="https://tgo.to">tgo.to</a> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в телеграм. 
