--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <h2 class="Logo">Telegram GoTo⚡️</h2>
             <div class="about">
                 <p>
-                Когда не работает t.me/
+                Когда не работает t.me/ - работает tgo.to/
                 </p>
                 <p>
                   <i>Зачем?</i> - Это удобнее чем вбивать логин в телеграм вручную.
@@ -109,7 +109,7 @@
             animation: fade-in-top ease 0.5s forwards;
             animation-delay: 1s;
             margin-left: 7px;
-            color: rgba(0, 115, 207);
+            color: #0073CF;
             cursor: pointer;
         }
                                                                                                                    
