--- a/about.html
+++ b/about.html
@@ -21,9 +21,8 @@
             document.getElementsByClassName("container")[0].classList.add("containerFadeOut");
             setTimeout(function(){window.location.assign("http://tgo.to/");}, 350);
         }
-        var q = 'cryptohumanbeing/78'
     </script>
-    <script async src="https://telegram.org/js/telegram-widget.js?5" data-telegram-post=q data-width="100%"></script>
+    <script async src="https://telegram.org/js/telegram-widget.js?5" data-telegram-post="cryptohumanbeing/78" data-width="100%"></script>
 </head>
   <body>
     <div class="container">
