--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 </head>
   <body>
     <div class="container">
-        <script async src="https://telegram.org/js/telegram-widget.js?5" data-telegram-post="cryptohumanbeing/78" data-width="100%"></script>
+        <iframe id="telegram-post-cryptohumanbeing-78" src="https://t.me/cryptohumanbeing/1?embed=1" width="100%" height="" frameborder="0" scrolling="no" style="border: none; overflow: hidden; min-width: 320px; height: 179px;"></iframe>
       <div>
         <h2 class="Logo">Telegram GoTo⚡️</h2>
             <div class="about">
