--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             setTimeout(function(){document.getElementsByClassName("input__label-content")[0].style.color = "#6a7989";}, 2500);
             document.getElementsByClassName("btn_goTestLink")[0].style.display = "block";
             setTimeout(function(){document.getElementsByClassName("btn_goTestLink")[0].style.opacity = "1";}, 10);
+            document.getElementById("frameTg").src = 'https://t.me/' + document.getElementsByClassName("getinput")[0].value.slise(7) + '/1?embed=1';
         });
         clipboard.on('error', function() {
             document.getElementsByClassName("input__label-content")[0].innerHTML = "Ссылка не скопирована, скопируйте вручную";
@@ -310,6 +311,7 @@
 <body>
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
+        <iframe id="frameTg" src="" width="100%" height="" frameborder="0" scrolling="no" style="border: none; overflow: hidden; min-width: 320px; height: 179px;"></iframe>
         <div class="box">
         <span class="input input--kyo goTestLink">
             <a class="btn_goTestLink" onclick="goTestLink()">открыть</a>
