--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 <body>
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
-        <!–- <iframe id="frameTg" src="" width="100%" height="" frameborder="0" scrolling="no" style="border: none; overflow: hidden; min-width: 320px; height: 179px;"></iframe> -->
+        <!– <iframe id="frameTg" src="" width="100%" height="" frameborder="0" scrolling="no" style="border: none; overflow: hidden; min-width: 320px; height: 179px;"></iframe> ->
         <div class="box">
         <span class="input input--kyo goTestLink">
             <a class="btn_goTestLink" onclick="goTestLink()">открыть</a>
