--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
      else {
         window.location = "tg://resolve?domain=" + l.pathname.slice(1);
      }
-     setTimeout(function(){ window.location.href = "/"; }, 200);
+    // setTimeout(function(){ window.location.href = "/"; }, 200);
    }
   
   
