--- a/404.html
+++ b/404.html
@@ -21,7 +21,8 @@
               (l.pathname ? 'p=' + l.pathname.replace(/&/g, '~and~').replace(repo, '') : '') +
               (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
               (l.hash))
-                  if (l.pathname.split('/')[1] !== null) {
+     console.log(l.pathname.split('/')[1]);
+     if (l.pathname.split('/')[1] !== null) {
         window.location = "tg://resolve?domain=" + l.pathname.slice(1) + '&post=' + l.pathname.split('/')[1];
      }
      else {
