--- a/404.html
+++ b/404.html
@@ -12,7 +12,18 @@
     <meta name="yandex-verification" content="9514ed2cd535e5da" />
     <meta name="msapplication-TileColor" content="#1e96c8">
     <meta name="theme-color" content="#1e96c8">
-  <title>TelegramGoTo</title> <script >    
+    <title>TelegramGoTo</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111537010-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-111537010-2');
+    </script>
+
+    <script >    
 ;(function(l, projectPages) {
   var repo = projectPages ? '/' + l.pathname.split('/')[1] : ''
    /* redirect all 404 trafic to index.html */
