--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         
     window.onload = (function () {
         var currentCookie = getCookie('tglink');
+        if (getCookie('lang') == null){
+            console.log('yeey');
+        }
         document.getElementsByClassName("getinput")[0].value = currentCookie;
         if (document.getElementsByClassName("getinput")[0].value.charAt(0) !== '@' && document.getElementsByClassName("getinput")[0].value.charAt(0) !== 'h' && document.getElementsByClassName("getinput")[0].value.charAt(0) !== 't' && !isEmpty(document.getElementsByClassName("getinput")[0].value)) {
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
