--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </span>
         </div>
         <div class="box">
-            <button onclick="createLink()" class="btn_getLink()">Получить ссылку</button>
+            <button onclick="createLink()" class="btn_getLink">Получить ссылку</button>
         </div>
     </div>
     <div onmouseover="containerSlideUp()" onmouseleave="containerSlideDown()" onclick="goAbout()" class="aboutLink">
