--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                       transition: opacity 0.25s ease-in-out;
         }
         .btn_changeLang {
-            position: absolute;
+            position: relative;
             float: right;
             right: 15px;
             margin-top: -25px;
