--- a/about.html
+++ b/about.html
@@ -42,9 +42,8 @@
             document.getElementsByClassName("m1")[0].innerHTML = "Когда не работает t.me/ - работает tgo.to/";
             document.getElementsByClassName("m2")[0].innerHTML = "<i>Зачем?</i> - Это удобнее чем вбивать логин в телеграм вручную.";
             document.getElementsByClassName("m3")[0].innerHTML = "<i>Есть аналоги. Чем <a href='https://tgo.to'>tgo.to</a> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в телеграм.";
-            document.getElementsByClassName("credits")[0].innerHTML = "Создатель сервиса: <a href="https://tgo.to/cryptohumanbeing">@cryptohumanbeing</a>
-            <br><br>По всем вопросам:<br> <a href="https://tgo.to/nikitashal">@nikitashal</a> с хаштегом #digitalresistance";
-            document.getElementsByClassName("rootLink")[0].innerHTML = '<- на главную';
+            document.getElementsByClassName("credits")[0].innerHTML = "Создатель сервиса: <a href='https://tgo.to/cryptohumanbeing'>@cryptohumanbeing</a><br><br>По всем вопросам:<br> <a href='https://tgo.to/nikitashal'>@nikitashal</a> с хаштегом #digitalresistance";
+            document.getElementsByClassName("rootLink")[0].innerHTML = "<- на главную";
         }
     });
         function goRoot(){
