--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
             setCookie('lang', 'eng');
         }
         if (getCookie('lang') == 'eng') {
-            document.getElementsByClassName("m1")[0].innerHTML = "When t.me/ doesn't work - tgo.to/ works ";
+            document.getElementsByClassName("m1")[0].innerHTML = "When t.me/ doesn't work - tgo.to/ works";
             document.getElementsByClassName("m2")[0].innerHTML = "<i>Why?</i> - This is more convenient than typing the login into telegrams manually.";
-            document.getElementsByClassName("m3")[0].innerHTML = "<i>There are analogues. How is <a href='https://tgo.to'>tgo.to</a> better?</i> - Analogues are forced to watch ads before switching to telegrams.";
+            document.getElementsByClassName("m3")[0].innerHTML = "<i>There are analogues. Why <a href='https://tgo.to'>tgo.to</a> better?</i> - Analogues are forced to watch ads before switching to telegrams.";
             document.getElementsByClassName("credits")[0].innerHTML = "Creator: <a href='https://tgo.to/cryptohumanbeing'>@cryptohumanbeing</a><br><br>For all questions:<br> <a href='https://tgo.to/nikitashal'>@nikitashal</a> with hashtag #digitalresistance";
             document.getElementsByClassName("rootLink")[0].innerHTML = "<- to main page";
         }
