--- a/404.html
+++ b/404.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html><html><head> 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1e96c8">
-    <meta name="apple-mobile-web-app-title" content="tgo.to">
-    <meta name="telegram goto" content="tgo.to">
-    <meta name="yandex-verification" content="9514ed2cd535e5da" />
-    <meta name="msapplication-TileColor" content="#1e96c8">
-    <meta name="theme-color" content="#1e96c8">
-    <title>TelegramGoTo</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111537010-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-111537010-2');
-    </script>
-
-    <script >    
-;(function(l, projectPages) {
-  var repo = projectPages ? '/' + l.pathname.split('/')[1] : ''
-   /* redirect all 404 trafic to index.html */
-   function redirect() {
-     l.replace(l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') + repo + '/?' +
-              (l.pathname ? 'p=' + l.pathname.replace(/&/g, '~and~').replace(repo, '') : '') +
-              (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-              (l.hash))
-     if (l.pathname.split('/')[2] !== undefined) {
-        window.location = "tg://resolve?domain=" + l.pathname.split('/')[1] + '&post=' + l.pathname.split('/')[2];
-     }
-     else {
-        window.location = "tg://resolve?domain=" + l.pathname.slice(1);
-     }
-     setTimeout(function(){ window.location.href = "/"; }, 200);
-   }
-  
-  
-   /* resolve 404 redirects into internal routes */
-   function resolve() {
-      if (l.search) {
-        var q = {}
-        l.search.slice(1).split('&').forEach(function(v) {
-          var a = v.split('=')
-          q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&')
-        })
-        if (q.p !== undefined) {
-          window.history.replaceState(null, null,
-            repo + (q.p || '') +
-            (q.q ? ('?' + q.q) : '') +
-            l.hash
-          )
-        }
-     }
-   }
-  /* if current document is 404 page page, redirect to index.html otherwise resolve */
-  document.title === 'TelegramGoTo' ? redirect() : resolve()
-}(window.location, window.projectPages || false ))</script>
-</head><body></body></html>
+<!doctypehtml><meta charset=utf-8><meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"name=viewport><link href=/apple-touch-icon.png rel=apple-touch-icon sizes=180x180><link href=/favicon-32x32.png rel=icon sizes=32x32 type=image/png><link href=/favicon-16x16.png rel=icon sizes=16x16 type=image/png><link href=/site.webmanifest rel=manifest><link href=/safari-pinned-tab.svg rel=mask-icon color=#1e96c8><meta content=tgo.to name=apple-mobile-web-app-title><meta content=tgo.to name="telegram goto"><meta content=9514ed2cd535e5da name=yandex-verification><meta content=#1e96c8 name=msapplication-TileColor><meta content=#1e96c8 name=theme-color><title>TelegramGoTo</title><script async src="https://www.googletagmanager.com/gtag/js?id=UA-111537010-2"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-111537010-2")</script><script>!function(a,e){var t=window.projectPages||false?"/"+a.pathname.split("/")[1]:"";"TelegramGoTo"===document.title?(a.replace(a.protocol+"//"+a.hostname+(a.port?":"+a.port:"")+t+"/?"+(a.pathname?"p="+a.pathname.replace(/&/g,"~and~").replace(t,""):"")+(a.search?"&q="+a.search.slice(1).replace(/&/g,"~and~"):"")+a.hash),void 0!==a.pathname.split("/")[2]?window.location="tg://resolve?domain="+a.pathname.split("/")[1]+"&post="+a.pathname.split("/")[2]:window.location="tg://resolve?domain="+a.pathname.slice(1),setTimeout(function(){window.location.href="/"},200)):function(){if(a.search){var o={};a.search.slice(1).split("&").forEach(function(a){var e=a.split("=");o[e[0]]=e.slice(1).join("=").replace(/~and~/g,"&")}),void 0!==o.p&&window.history.replaceState(null,null,t+(o.p||"")+(o.q?"?"+o.q:"")+a.hash)}}()}(window.location)</script>
