--- a/index.html
+++ b/index.html
@@ -588,9 +588,19 @@
         }
         
         .btn_getLink {
-          transform: scaleY(0);
-          transform-origin: top;
-          margin-top: 15px;
+            transform: scaleY(0);
+            transform-origin: top;
+            margin-top: 15px;
+            font-size: 14px;
+            font-weight: bold;
+            line-height: 100%;
+            color: #FFF;
+            background: #5dc390;
+            border-radius: 22px;
+            overflow: hidden;
+            display: inline-block;
+            padding: 15px 27px 13px;
+            text-transform: uppercase;
         }
         
         .btn_getLinkShow {
