--- a/index.html
+++ b/index.html
@@ -598,9 +598,9 @@
             background: #5dc390;
             border-radius: 22px;
             overflow: hidden;
-            display: inline-block;
-            padding: 15px 27px 13px;
+            padding: 12px 20px 11px;
             text-transform: uppercase;
+            cursor: pointer;
         }
         
         .btn_getLinkShow {
