--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             font-weight: bold;
             line-height: 100%;
             color: #FFF;
-            background: #5dc390;
+            background: #33d684;
             border-radius: 22px;
             overflow: hidden;
             padding: 12px 20px 11px;
