--- a/index.html
+++ b/index.html
@@ -591,16 +591,20 @@
             transform: scaleY(0);
             transform-origin: top;
             margin-top: 15px;
-            font-size: 14px;
+            font-size: 12px;
             font-weight: bold;
             line-height: 100%;
             color: #FFF;
             background: #33d684;
             border-radius: 22px;
             overflow: hidden;
-            padding: 12px 20px 11px;
+            padding: 10px 15px 7px;
             text-transform: uppercase;
             cursor: pointer;
+        }
+        
+        .btn_getLink::hover {
+            background: 5dc390;
         }
         
         .btn_getLinkShow {
